test/integration/bad/rng-no-suffix.stan
functions {
    real newdistribution_rng(real x) {
        return x;
    }
}
transformed data {
    real x = newdistribution(1);
}